gcc/testsuite/gdc.test/runnable/imports/test48a.d
module imports.test48a;

struct S
{
    int a = 1;
    int b = 2;
  private:
    int c = 3;
}
